test/spec_vectors/local_tee/fail/module_17.wat
(module (func $type-param-arg-empty-vs-num-in-loop (param i32) (i32.const 0) (loop (local.tee 0) (drop))))